# POC-rust-microservice

./: .deepsource.toml  Cargo.toml
.github/: dependabot.yml
.github/workflows/: build.yml  infisical-secrets-check.yml
src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  tests.rs
