[package]
name = "poc_microservice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poc_microservice"
path = "src/main.rs"

[lib]
name = "poc_microservice"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
